css/styles.css
@charset "utf-8";
/* CSS Document */

body,td,th,p{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
	line-height: 1.5;
}
body {
	background-color: #fdfdfd;
	margin: 0;
	position:relative;
}
ul, li {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
}
a {
	color: orange;
	text-decoration: none;
}
a:hover, a:focus {
	color: #3397db;
	text-decoration: none;
}
a img{
	border: none 0px #fff;
}
h1, h2, h3, h4, h5, h6 {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 0 20px;
}
article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
	display: block;
}
#maincontent {
  background-color: #f3f3f3;
  min-height: 100%;
  /*new rules below this line*/
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: stretch;
  width: 100vw;
/*  padding-top: 20vh;*/
}
#footer {
  background-color: #252831;
  color: #aaa;
  font-size: 8pt;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase;
}
/* ====================== Navigation ====================== */
nav {
  width: 100vw; /*changed % to vw*/
  height: 4em; /*changed from 80%*/
  background-color: #252831;
  text-align: center;
  padding: 1em; /*added padding*/
}
nav h1 {
  margin: auto;
}
nav h1 a {
  color: #fff;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}
#breadcrumb {
    padding: 10px 40px 16px;
    list-style: none;
    background-color: #eee;
    font-size: 17px;
    margin: 0;
    /*new rules below this line*/
    width: 100vw;
}

/* Display list items side by side */
#breadcrumb li {
    display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li+li:before {
    padding: 8px;
    color: black;
    content: "/\00a0";
}

/* Add a color to all links inside the list */
#breadcrumb li a {
    color: #0275d8;
    text-decoration: none;
}

/* Add a color on mouse-over */
#breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}
/* ====================== Map ====================== */
#map {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}
/* ====================== Restaurant Filtering ====================== */
.filter-options {
  width: 100vw; /*changed % to vw*/
  height: 100%; /*changed*/
  background-color: #006cb5;
  align-items: center;
  /*New values below this line*/
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.filter-options h2 {
  color: white;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
  margin: 0 20px;
  width: 100vw;
  text-align: center;
  padding: 1em;
}
.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial,sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 10px;
  padding: 0 10px;
  width: 200px;
}

/* ====================== Restaurant Listing ====================== */
#restaurants-list {
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 0; /*changed*/
  text-align: center;
  /*new rules below this line*/
  display: flex;
  flex-wrap: wrap;
  width: 100vw;
  justify-content: space-around;
}
#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial,sans-serif;
  margin: 15px;
  min-height: 380px;
  padding: 0 30px 25px;
  text-align: left;
  width: 80vw; /*changed*/
  /*new rules below this line*/
  max-width: 270px;
}
#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  max-width: 100%;
  min-height: 248px;
  min-width: 100%;
}
#restaurants-list li h1 {
  color: #006cb5;
  font-family: Arial,sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
}
#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}
#restaurants-list li a {
  background-color: #006cb5;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

/* ====================== Restaurant Details ====================== */
.inside header {
/*  position: fixed;*/
  top: 0;
  width: 100%;
  z-index: 1000;
}
.inside #map-container {
  background: blue none repeat scroll 0 0;
  height: 87vh;
  /*position: fixed;
  right: 0;
  top: 80px;*/
  width: 100vw;
  max-height: 500px;
  order: -1;
}
.inside #map {
  background-color: #ccc;
  height: 100%;
  width: 100%;
}
.inside #footer {
  bottom: 0;
  position: absolute;
  /*new rules below this line*/
  width: 100vw;
  text-align: center;
}
#restaurant-name {
  color: #f18200;
  font-family: Arial,sans-serif;
  font-size: 20pt;
  font-weight: 200;
  letter-spacing: 0;
  margin: 15px 0 30px;
  text-transform: uppercase;
  line-height: 1.1;
}
#restaurant-img {
	width: 90%;
  max-width: 720px;
}
#restaurant-address {
  font-size: 12pt;
  margin: 10px 0px;
}
#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
  text-align: center;
  text-transform: uppercase;
	width: 90vw;
  max-width: 720px;
}
#restaurant-container, #reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 40px 30px 80px;
  /*new rules below this line*/
  text-align: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}
#restaurant-container {
  order: 1;
}
#reviews-container {
  padding: 30px 40px 80px;
  order: 2;
}
#reviews-container h2 {
  color: #f58500;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
}
#reviews-list {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}
#reviews-list li {
  background-color: #fff;
  border: 2px solid #f3f3f3;
  display: block;
  list-style-type: none;
  margin: 0 0 30px;
  overflow: hidden;
  padding: 0 20px 20px;
  position: relative;
  width: 85%;
  max-width: 1000px;  text-align: left;
}
#reviews-list li p {
  margin: 0 0 10px;
}
#restaurant-hours td {
  color: #666;
}

